- support for The Legend of Yoshi (SMN?66)
- support for Remixed Super Mario Bros. Wii (SMN?60)
- support for Ghostly Super Mario Boos. Wii (SMN?65)
- update wit/wszst override for MKWiimm
  - if you can't build MKWiimm, set MKWIIMM_OVERRIDE_SZS=TRUE
    in ~/.patchimage.rc to use supplied tools, that the case
    on Debian GNU/Linux Stretch or Sid
- update link to Wiimmfi-Patcher (Generic)
- update link to Wiimmfi-Patcher (Mario Kart Wii)

v6.0.0:
- update szs to version 1.40a
- add support for MKWiimm 2015-05
- support for replacing characters in NSMBW

v5.4.0:
- fixed major bug creating MKWiimm: image was not saved to proper
  destination directory (now everything's fine)
- update wit to version 2.31a
- update szs to version 1.39a
- add support for MKWiimm 2015-03
- add support for creating multiple MKWiimm at once
- add support for replacing karts in MKWiimm
  The madness begins, feel free to test this out. downloaded
  karts are prefixed mkwiimm_kart_ to avoid naming collision
  with fonts and items (3-chars.szs naming-scheme)
  .
  Original files are backed-up in ${PATCHIMAGE_RIIVOLUTION_DIR}/ \
  ${GAME}_SZS/ - for example /home/chris/Hacks/RMCP27_SZS/ and
  restored every time when you change your selection on the same
  game.
  .
  Your choices are saved into ${HOME}/.patchimage.choice, if
  you want to modify another MKWiimm with the same settings,
  simply enter y when the script asks you whether you want to
  apply your previous settings, else enter n for new choices.
  .
  No dummys were harmed during the making of this feature
- downloaded fonts for MKWiimm are now prefixed mkwiimm_font_
- downloaded items for MKWiimm are now prefixed mkwiimm_item_
- add support for SMN?41 (Devil Mario Winter Special)
- add support for SMN?31 (New Super Mario Bros. Wii - Other World)
- add MKWIIMM_OVERRIDE_SZS variable to patchimage.rc
  If set to TRUE patchimage will override the supplied SZS tools
  of the MKWiimm patcher with it's own version of the tools.
  .